location page updated

--- a/_pages/cafe-lounge.html
+++ b/_pages/cafe-lounge.html
@@ -22,7 +22,9 @@ meta_tags:
     <img src="/assets/images/cafe-lounge/cafe-lounge-banner.jpg" alt="Cafe Lounge">
   {% endregionblock %}
   <div class="inner-banner-content">
-    <h1 tabindex="0">cafe lounge</h1>
+    {% regionblock banner_heading, type:header %}
+      <h1 tabindex="0">cafe lounge</h1>
+    {% endregionblock %}
   </div>
 </section>
 
@@ -30,30 +32,52 @@ meta_tags:
 <section class="cafelounge">
   <div class="cafelounge__row cafelounge__row--alternate">
     <div class="cafelounge__image">
+      {% regionblock lunch_image, type:image %}
       <img src="/assets/images/cafe-lounge/cafe-lunch.jpg" alt="Cafe Lunch">
+      {% endregionblock %}
     </div>
     <div class="cafelounge__content">
       <div class="cafelounge__content__inner">
-        <h2>lunch</h2>
-        <div class="hours">Hours: 11:00 - 18:00</div>
-        <p>Menu: local lunch dishes, local sweets, matcha, coffee, and more</p>
+        {% regionblock lunch_headline, type:text %}
+        <h2 tabindex="0">lunch</h2>
+        {% endregionblock %}
+        <div class="hours" tabindex="0">
+          {% regionblock lunch_hours, type:text %}
+            Hours: 11:00 - 18:00
+          {% endregionblock %}
+        </div>
+        {% regionblock lunch_menu, type:text %}
+          <p tabindex="0">Menu: local lunch dishes, local sweets, matcha, coffee, and more</p>
+        {% endregionblock %}
         <div class="btn-holder">
-          <a class="primary-btn inverse" href="/rooms/"><span>See Menu</span><i class="fas fa-angle-right"></i></a>
+          <a class="primary-btn inverse" href="#"><span>{% t 'see_menu' %}</span><i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
   </div>
   <div class="cafelounge__row">
     <div class="cafelounge__image">
-      <img src="/assets/images/cafe-lounge/cafe-dinner.jpg" alt="Cafe Dinner">
+      {% regionblock dinner_image, type:image %}
+        <img src="/assets/images/cafe-lounge/cafe-dinner.jpg" alt="Cafe Dinner">
+      {% endregionblock %}
     </div>
     <div class="cafelounge__content">
       <div class="cafelounge__content__inner">
-        <h2>dinner & bar</h2>
-        <div class="hours">Hours: 18:00 - 24:00</div>
-        <p>Menu: local dishes, sake, wine, local liquor, and more</p>
+        {% regionblock dinner_headline, type:text %}
+          <h2 tabindex="0">dinner & bar</h2>
+        {% endregionblock %}
+        <div class="hours" tabindex="0">
+          {% regionblock dinner_hours, type:text %}
+            Hours: 18:00 - 24:00
+          {% endregionblock %}
+        </div>
+
+        {% regionblock dinner_menu, type:text %}
+          <p tabindex="0">Menu: local dishes, sake, wine, local liquor, and more</p>
+        {% endregionblock %}
+
         <div class="btn-holder">
-          <a class="primary-btn inverse" href="/rooms/"><span>See Menu</span><i class="fas fa-angle-right"></i></a>
+          <a class="primary-btn inverse" href="#"><span>{% t 'see_menu' %}</span><i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
@@ -63,12 +87,20 @@ meta_tags:
 <section class="cross-sell">
   <div class="cross-sell__row">
     <div class="cross-sell__image">
-      <img src="/assets/images/cafe-lounge/cross-sell.jpg" alt="Menu curated by one of the most renowned French restaurants in Tokyo">
+      {% regionblock cross-sell_image, type:image %}
+        <img src="/assets/images/cafe-lounge/cross-sell.jpg" alt="Menu curated by one of the most renowned French restaurants in Tokyo">
+      {% endregionblock %}
     </div>
     <div class="cross-sell__content">
-      <h2>Menu curated by one of the most renowned French restaurants in Tokyo</h2>
+      <h2 tabindex="0">
+        {% regionblock cross-sell_text, type:text %}
+          Menu curated by one of the most renowned French restaurants in Tokyo
+        {% endregionblock %}
+      </h2>
       <div class="cross-sell__logo">
-        <img src="/assets/images/cafe-lounge/sample-logo.png" alt="">
+        {% regionblock cross-sell_text, type:text %}
+          <img src="/assets/images/cafe-lounge/sample-logo.png" alt="Restaurants">
+        {% endregionblock %}
       </div>
     </div>
   </div>
@@ -77,12 +109,20 @@ meta_tags:
 <section class="cafelounge">
   <div class="cafelounge__row">
     <div class="cafelounge__image">
-      <img src="/assets/images/cafe-lounge/kota.jpg" alt="Kota Narusawa">
+      {% regionblock chef_image, type:image %}
+        <img src="/assets/images/cafe-lounge/kota.jpg" alt="Kota Narusawa">
+      {% endregionblock %}
     </div>
     <div class="cafelounge__content">
       <div class="cafelounge__content__inner">
-        <h2>Kota Narusawa</h2>
-        <p>Kota is the general manager and chef sommelier of TOYO restaurant located in Tokyo’s Midtown Hibiya. Kota was trained at Ginza l’Odorante, Azabu Juban Liberté a table de TAKEDA (Michelin Guide * one star) as manager / sommelier. He is an expert in pairing with a wide array of cuisine, a skill he honed collaborating with restaurants from all over the world.</p>
+        {% regionblock chef_name, type:text %}
+          <h2 tabindex="0">Kota Narusawa</h2>
+        {% endregionblock %}
+        {% regionblock chef_info, type:text %}
+          <div tabindex="0">
+            <p>Kota is the general manager and chef sommelier of TOYO restaurant located in Tokyo’s Midtown Hibiya. Kota was trained at Ginza l’Odorante, Azabu Juban Liberté a table de TAKEDA (Michelin Guide * one star) as manager / sommelier. He is an expert in pairing with a wide array of cuisine, a skill he honed collaborating with restaurants from all over the world.</p>
+          </div>
+        {% endregionblock %}
       </div>
     </div>
   </div>
@@ -90,28 +130,49 @@ meta_tags:
 
 <section class="hours-schedule">
   <div class="hours-schedule__container">
-    <h2>Hours & Schedule</h2>
-    <p>Monday to Friday: 11:00 - 24:00   |   Saturday: 11:00 - 24:00   |   Sunday: 11:00 - 15:00</p>
+    <h2 tabindex="0">
+      {% regionblock schedule_title, type:text %}
+        Hours & Schedule
+      {% endregionblock %}
+    </h2>
+
+    <p tabindex="0">
+      {% regionblock schedule_title, type:text %}
+        Monday to Friday: 11:00 - 24:00 | Saturday: 11:00 - 24:00 | Sunday: 11:00 - 15:00
+      {% endregionblock %}
+    </p>
     <div class="hours-schedule__row">
       <div class="hours-schedule__content">
-        <h4>November 2018</h4>
-        <ul class="schedule">
-          <li><a href=""><span>11/06</span>Venue closed due to private party</a></li>
-          <li><a href=""><span>11/18</span>Live jazz night featuring a saxophone, guitar and double bass</a></li>
-          <li><a href=""><span>11/19</span>Live jazz night featuring the Tokyo Jazz Ensamble</a></li>
-          <li><a href=""><span>11/23</span>Live jazz night featuring a,b,c</a></li>
-        </ul>
+        <h4 tabindex="0">
+          {% regionblock schedule_left_month, type:text %}
+            November 2018
+          {% endregionblock %}
+        </h4>
+        {% regionblock schedule_left_dates, type:text %}
+          <ul class="schedule" tabindex="0">
+            <li><a href=""><span>11/06</span>Venue closed due to private party</a></li>
+            <li><a href=""><span>11/18</span>Live jazz night featuring a saxophone, guitar and double bass</a></li>
+            <li><a href=""><span>11/19</span>Live jazz night featuring the Tokyo Jazz Ensamble</a></li>
+            <li><a href=""><span>11/23</span>Live jazz night featuring a,b,c</a></li>
+          </ul>
+        {% endregionblock %}
       </div>
       <div class="hours-schedule__content">
-        <h4>December 2018</h4>
-        <ul class="schedule">
-          <li><a href=""><span>12/06</span>Venue closed due to private party</a></li>
-          <li><a href=""><span>12/14</span>Live jazz night featuring a,b,c</a></li>
-          <li><a href=""><span>12/18</span>Live jazz night featuring a,b,c</a></li>
-          <li><a href=""><span>12/19</span>Live jazz night featuring a,b,c</a></li>
-          <li><a href=""><span>12/22</span>Live jazz night featuring a,b,c</a></li>
-          <li><a href=""><span>12/23</span>Live jazz night featuring a,b,c</a></li>
-        </ul>
+        <h4 tabindex="0">
+          {% regionblock schedule_right_month, type:text %}
+            December 2018
+          {% endregionblock %}
+        </h4>
+        {% regionblock schedule_right_dates, type:text %}
+          <ul class="schedule" tabindex="0">
+            <li><a href=""><span>12/06</span>Venue closed due to private party</a></li>
+            <li><a href=""><span>12/14</span>Live jazz night featuring a,b,c</a></li>
+            <li><a href=""><span>12/18</span>Live jazz night featuring a,b,c</a></li>
+            <li><a href=""><span>12/19</span>Live jazz night featuring a,b,c</a></li>
+            <li><a href=""><span>12/22</span>Live jazz night featuring a,b,c</a></li>
+            <li><a href=""><span>12/23</span>Live jazz night featuring a,b,c</a></li>
+          </ul>
+        {% endregionblock %}
       </div>
     </div>
   </div>
@@ -124,11 +185,17 @@ meta_tags:
     </div>
     <div class="cafelounge__content">
       <div class="cafelounge__content__inner">
-        <h2>Event Space</h2>
-        <p>You can book our bar lounge for events. If interested, please inquire at <a href="mailto:info@hotelzen.jp">info@hotelzen.jp</a></p>
+        {% regionblock event_space, type:text %}
+          <h2 tabindex="0">Event Space</h2>
+        {% endregionblock %}
+        {% regionblock event_space_content, type:text %}
+          <p tabindex="0">
+            You can book our bar lounge for events. If interested, please inquire at <a href="mailto:info@hotelzen.jp">info@hotelzen.jp</a>
+        </p>
+        {% endregionblock %}
         <div class="btn-holder">
-          <a class="primary-btn inverse mr-4 mb-3" href="/rooms/"><span>See Venue Details</span><i class="fas fa-angle-right"></i></a>
-          <a class="primary-btn inverse" href="/rooms/"><span>Enquire</span><i class="fas fa-angle-right"></i></a>
+          <a class="primary-btn inverse mr-4 mb-3" href=""><span>See Venue Details</span><i class="fas fa-angle-right"></i></a>
+          <a class="primary-btn inverse" href="/request-for-proposal/"><span>Enquire</span><i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
