--- a/_pages/amenities.html
+++ b/_pages/amenities.html
@@ -32,48 +32,33 @@ meta_tags:
 <section class="amenities">
   <h2>Luggage Storage</h2>
   <div class="amenities__row">
-    <div class="amenities__item">
-      <img src="/assets/images/amenities/locker.jpg" alt="Locker">
-      <p>Your own locker</p>
-    </div>
-    <div class="amenities__item">
-      <img src="/assets/images/amenities/locker.jpg" alt="Locker">
-      <p>Your own locker</p>
-    </div>
-    <div class="amenities__item">
-      <img src="/assets/images/amenities/locker.jpg" alt="Locker">
-      <p>Your own locker</p>
-    </div>
+    {% assign items = site.data._models.amenities | sort: 'order' | where: "category","Luggage Storage" %}
+    {% for item in items %}
+      <div class="amenities__item">
+        <img src="{{ item.image.url_medium }}" alt="{{ item.title }}">
+        <p>{{ item.title }}</p>
+      </div>
+    {% endfor %}
   </div>
   <h2>Amenities and Services</h2>
   <div class="amenities__row">
-    <div class="amenities__item">
-      <img src="/assets/images/amenities/locker.jpg" alt="Locker">
-      <p>Your own locker</p>
-    </div>
-    <div class="amenities__item">
-      <img src="/assets/images/amenities/locker.jpg" alt="Locker">
-      <p>Your own locker</p>
-    </div>
-    <div class="amenities__item">
-      <img src="/assets/images/amenities/locker.jpg" alt="Locker">
-      <p>Your own locker</p>
-    </div>
+    {% assign items = site.data._models.amenities | sort: 'order' | where: "category","Amenities & Services" %}
+    {% for item in items %}
+      <div class="amenities__item">
+        <img src="{{ item.image.url_medium }}" alt="{{ item.title }}">
+        <p>{{ item.title }}</p>
+      </div>
+    {% endfor %}
   </div>
   <h2>Common Facilities</h2>
   <div class="amenities__row">
+    {% assign items = site.data._models.amenities | sort: 'order' | where: "category","Common Facilities" %}
+    {% for item in items %}
     <div class="amenities__item">
-      <img src="/assets/images/amenities/locker.jpg" alt="Locker">
-      <p>Your own locker</p>
+      <img src="{{ item.image.url_medium }}" alt="{{ item.title }}">
+      <p>{{ item.title }}</p>
     </div>
-    <div class="amenities__item">
-      <img src="/assets/images/amenities/locker.jpg" alt="Locker">
-      <p>Your own locker</p>
-    </div>
-    <div class="amenities__item">
-      <img src="/assets/images/amenities/locker.jpg" alt="Locker">
-      <p>Your own locker</p>
-    </div>
+    {% endfor %}
   </div>
 </section>
 
