Location Page "Minutes away" section list items design issue fixed

--- a/_pages/location.html
+++ b/_pages/location.html
@@ -52,26 +52,23 @@ meta_tags:
         {% regionblock location_map_description, type:text %}
           <p tabindex="0">Hotel Zen Tokyo is located 30 seconds away from the closest metro station, providing immediate access to travel destinations around Tokyo. Destinations like Ginza, Asakusa, Akihabara, Roppongi, and Shiubya are all minutes away.</p>
         {% endregionblock %}
-        {% regionblock location_map_left, type:text %}
+        {% regionblock location_map_list_items, type:text %}
           <ul class="two-col__content__list" tabindex="0">
-            <li>Akihabara: 3 minutes</li>
-            <li>Akihabara: 3 minutes</li>
-            <li>Asakusa: 7 minutes</li>
-            <li>Ginza: 9 minutes</li>
-            <li>Tsukiji: 10 minutes</li>
-            <li>Tokyo Sky Tree: 14 minutes</li>
+            <li> Akihabara: 3 minutes </li>
+            <li> Asakusa: 7 minutes </li>
+            <li> Ginza: 9 minutes </li>
+            <li> Tsukiji: 10 minutes </li>
+            <li> Tokyo Sky Tree: 14 minutes </li>
+          </ul>
+          <ul class="two-col__content__list" tabindex="0">
+            <li> Tokyo station: 20 minute walk </li>
+            <li> Ryogoku (sumo): 12 minutes </li>
+            <li> Roppongi: 24 minutes </li>
+            <li> Shibuya: 28 minutes </li>
+            <li> Shinjuku: 29 minutes </li>
           </ul>
         {% endregionblock %}
-        {% regionblock location_map_right, type:text %}
-        <ul class="two-col__content__list" tabindex="0">
-          <li>Akihabara: 3 minutes</li>
-          <li>Akihabara: 3 minutes</li>
-          <li>Asakusa: 7 minutes</li>
-          <li>Ginza: 9 minutes</li>
-          <li>Tsukiji: 10 minutes</li>
-          <li>Tokyo Sky Tree: 14 minutes</li>
-        </ul>
-        {% endregionblock %}
+        <div class="clearfix"></div>
       </div>
     </div>
   </div>
