Location Page list items vertically aligned to top

--- a/_pages/location.html
+++ b/_pages/location.html
@@ -52,7 +52,7 @@ meta_tags:
         {% regionblock location_map_description, type:text %}
           <p tabindex="0">Hotel Zen Tokyo is located 30 seconds away from the closest metro station, providing immediate access to travel destinations around Tokyo. Destinations like Ginza, Asakusa, Akihabara, Roppongi, and Shiubya are all minutes away.</p>
         {% endregionblock %}
-        {% regionblock location_map_list_items, type:text %}
+        {% regionblock location_map_distances_list, type:text %}
           <ul class="two-col__content__list" tabindex="0">
             <li> Akihabara: 3 minutes </li>
             <li> Asakusa: 7 minutes </li>
