Location page map image made editable

--- a/_pages/location.html
+++ b/_pages/location.html
@@ -35,10 +35,12 @@ meta_tags:
 <section class="two-col two-col--location">
   <div class="two-col__row">
     <div class="two-col__image">
-      <img src="/assets/images/location/location-map.jpg" alt="Location Map">
+      {% regionblock location_map_image, type:image %}
+        <img src="/assets/images/location/location-map.jpg" alt="Location Map">
+      {% endregionblock %}
     </div>
     <div class="two-col__content">
-      <div class="two-col__content__inner">
+      <div class="two-col__content__inner prime-location">
         <h4 tabindex="0">
           {% regionblock location_map_subtitle, type:text %}
             Prime Location
@@ -68,7 +70,6 @@ meta_tags:
             <li> Shinjuku: 29 minutes </li>
           </ul>
         {% endregionblock %}
-        <div class="clearfix"></div>
       </div>
     </div>
   </div>
