PDF menu opens in new tab in dining page.

--- a/_pages/cafe-lounge.html
+++ b/_pages/cafe-lounge.html
@@ -46,7 +46,7 @@ meta_tags:
         </div>
         <p tabindex="0">Menu: {{menu.menu_items}}</p>
         <div class="btn-holder">
-          <a class="primary-btn inverse" href="{{menu.menu_btn_link}}"><span>{{menu.menu_btn_text}}</span><i class="fas fa-angle-right"></i></a>
+          <a class="primary-btn inverse" href="{{menu.menu_btn_link}}" target="_blank"><span>{{menu.menu_btn_text}}</span><i class="fas fa-angle-right"></i></a>
         </div>
       </div>
     </div>
