--- a/_pages/offers.html
+++ b/_pages/offers.html
@@ -43,7 +43,7 @@ meta_tags:
       <div class="offers__content__inner">
         <h2><a href="/offers/{{ offer.url_friendly_name }}/">{{ offer.title }}</a></h2>
         <p>{{ offer.short_description }}</p>
-        <a class="primary-btn" href="/offers/{{ offer.url_friendly_name }}/"><span>View Offer</span><i class="fas fa-angle-right"></i></a>
+        <a class="primary-btn" href="/offers/{{ offer.url_friendly_name }}/"><span>{% t 'view_offer' %}</span><i class="fas fa-angle-right"></i></a>
       </div>
     </div>
   </div>
