--- a/_pages/cafe-lounge.html
+++ b/_pages/cafe-lounge.html
@@ -109,7 +109,7 @@ meta_tags:
     </h2>
 
     <p tabindex="0">
-      {% regionblock schedule_title, type:text %}
+      {% regionblock schedule_time, type:text %}
         Monday to Friday: 11:00 - 24:00 | Saturday: 11:00 - 24:00 | Sunday: 11:00 - 15:00
       {% endregionblock %}
     </p>
