--- a/_pages/offers.html
+++ b/_pages/offers.html
@@ -36,7 +36,7 @@ meta_tags:
     <div class="offers__image">
       <div class="offers__image__inner">
         <img src="{{ offer.image.url_medium }}" alt="{{ offer.title }}">
-        <a class="primary-btn inverse" href="{{ offer.offer_url }}" target="_blank"><span>{% t 'check_rate' %}</span><i class="fas fa-angle-right"></i></a>
+        <!-- <a class="primary-btn inverse" href="{{ offer.offer_url }}" target="_blank"><span>{% t 'check_rate' %}</span><i class="fas fa-angle-right"></i></a> -->
       </div>
     </div>
     <div class="offers__content">
