location page qa

--- a/_pages/amenities.html
+++ b/_pages/amenities.html
@@ -75,6 +75,11 @@ meta_tags:
         <li>Entire list 8</li>
         <li>Entire list 9</li>
         <li>Entire list 10</li>
+        <li>Entire list 11</li>
+        <li>Entire list 12</li>
+        <li>Entire list 13</li>
+        <li>Entire list 14</li>
+        <li>Entire list 15</li>
       </ul>
       {% endregionblock %}
     </div>
