--- a/_pages/location.html
+++ b/_pages/location.html
@@ -28,7 +28,7 @@ meta_tags:
     {% regionblock location_title, type:header %}
       <h1 class="lowercase" tabindex="0">{% t 'location' %}</h1>
     {% endregionblock %}
-    <a class="primary-btn" href="#findus" rel="nofollow"><span>Get Directions</span><i class="fas fa-angle-right"></i></a>
+    <a class="primary-btn m-hide" href="#findus" rel="nofollow"><span>Get Directions</span><i class="fas fa-angle-right"></i></a>
   </div>
 </section>
 
