--- a/_pages/offers.html
+++ b/_pages/offers.html
@@ -10,8 +10,8 @@ permalink_localized:
   en: /offers/
   ja: /offers/
 published_localized:
-  en: true
-  ja: true
+  en: false
+  ja: false
 meta_tags:
   robots:
 ---
