--- a/_pages/404.html
+++ b/_pages/404.html
@@ -1,10 +1,19 @@
 ---
 layout: default
 title: hotel zen tokyo - page not found
-meta_description:
-permalink: /page-not-found/
+meta_description: 
+permalink: "/page-not-found/"
 meta_tags:
-  robots:
+  robots: 
+published_localized:
+  en: true
+  ja: true
+title_localized:
+  en: Page Not Found | Hotel Zen Tokyo
+permalink_localized:
+  en: "/page-not-found/"
+label: Page Not Found | Hotel Zen Tokyo
+
 ---
 
 {% if site.active_lang == "ja" %}
