Updating _pages/thank-you.html

--- a/_pages/thank-you.html
+++ b/_pages/thank-you.html
@@ -1,19 +1,21 @@
 ---
 layout: default
 title_localized:
-  en: hotel zen tokyo - thank you
+  en: Thank You | Hotel Zen Tokyo
   ja: ありがとうございました
 meta_description_localized:
-  en:
-  ja:
+  en: 
+  ja: 
 permalink_localized:
-  en: /thank-you/
-  ja: /thank-you/
+  en: "/thank-you/"
+  ja: "/thank-you/"
 published_localized:
   en: true
   ja: true
 meta_tags:
-  robots:
+  robots: 
+label: Thank You | Hotel Zen Tokyo
+
 ---
 
 <!-- Thankyou Banner -->
