--- a/_pages/careers.html
+++ b/_pages/careers.html
@@ -4,10 +4,11 @@ title_localized:
   en: Hospitality Careers in Tokyo | Jobs at Hotel Zen Tokyo
   ja: hotel zen tokyo careers
 meta_description_localized:
-  en: Take a look at the current openings here at the Hotel Zen Tokyo, located in the heart of Tokyo. Find our most recent jobs and apply online.
+  en: Take a look at the current openings here at the Hotel Zen Tokyo, located in
+    the heart of Tokyo. Find our most recent jobs and apply online.
   ja: hotel zen tokyoの採用サイトです。グローバルな環境でホテル・飲食の新規事業立ち上げに挑戦することができます。ホテル経営やオペレーション、飲食店の経営、接客業、事業の立ち上げにご関心のある方はお問い合わせください。日本語と日常会話以上の英語レベル必須。
 permalink_localized:
-  en: "///careers/"
+  en: "/careers/"
   ja: "///careers/"
 published_localized:
   en: true
